fix overlap problem intro and carousel button

--- a/Frontend/app/assets/stylesheets/documentuploadpage/_right_main_content.scss
+++ b/Frontend/app/assets/stylesheets/documentuploadpage/_right_main_content.scss
@@ -45,7 +45,7 @@ body {
   width: 100%;
   position: relative;
   font-family: Arial, sans-serif;
-  z-index: 3;
+  z-index: 4;
 }
 
 .tabs input[type="radio"] {
@@ -58,7 +58,7 @@ body {
   padding: 0;
   margin: -40px;
   position: relative;
-  z-index: 4;
+  z-index: 5;
 }
 
 .tabs ul li {
@@ -75,7 +75,7 @@ body {
   border-bottom: none;
   background-color: #ffffff;
   border-radius: 4px;
-  z-index: 5;
+  z-index: 6;
 }
 
 .tabs label:hover {
@@ -124,7 +124,7 @@ input[id="tab5"]:checked ~ ul li label[for="tab5"] {
 .Next{
   position: fixed;
   color: white;
-  z-index: 5;
+  z-index: 6;
   top: 105%;
   display: inline-block;
   padding: 10px 20px;
@@ -148,7 +148,7 @@ input[id="tab5"]:checked ~ ul li label[for="tab5"] {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   border-radius: 5px;
   min-width: #{$tab-count * 60px};
-  z-index: 2;
+  z-index: 3;
 
   input[name="tab-control"] {
     display: none;
@@ -353,7 +353,7 @@ input[id="tab5"]:checked ~ ul li label[for="tab5"] {
   animation: content 0.3s ease-in-out;
   display: inline-block;
   align-items: center;
-  z-index: 5;
+  z-index: 6;
 }
 
 .upload-btn-wrapper:hover {
@@ -462,7 +462,7 @@ input[id="tab5"]:checked ~ ul li label[for="tab5"] {
   max-height: 800; /* Maximum height of the image */
   display: block;
   margin-top: 0px;
-  z-index: 2;
+  z-index: 3;
 }
 
 .carousel > ul {
@@ -490,7 +490,7 @@ input[id="tab5"]:checked ~ ul li label[for="tab5"] {
 
 .slide[data-active] {
   opacity: 1;
-  z-index: 2;
+  z-index: 3;
   transition-delay: 0ms;
 }
 
@@ -528,69 +528,76 @@ input[id="tab5"]:checked ~ ul li label[for="tab5"] {
   right: 30.9rem;
 }
 
-.modal-box {
-  z-index: 999;
-  background-color: #fff;
-  max-width: 380px;
-  width: 100%;
-  padding: 30px 20px;
-  flex-direction: column;
-  align-items: center;
-  border-radius: 24px;
-  display: flex;
-  opacity: 0;
-  pointer-events: none; 
-  position: fixed;
-  top: 30%;
-  left: 50%;
-  right: 50%;
-  transform: translate(-50%, -50%) scale(1.2);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-}
-.modal-box i {
-  font-size: 70px;
-  color: #fa3943;  
-}
+// .modal-box {
+//   z-index: 999;
+//   background-color: #fff;
+//   max-width: 380px;
+//   width: 100%;
+//   padding: 30px 20px;
+//   flex-direction: column;
+//   align-items: center;
+//   border-radius: 24px;
+//   display: flex;
+//   opacity: 0;
+//   pointer-events: none; 
+//   position: fixed;
+//   top: 30%;
+//   left: 50%;
+//   right: 50%;
+//   transform: translate(-50%, -50%) scale(1.2);
+//   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+//   transition: all 0.3s ease;
+// }
+// .modal-box i {
+//   font-size: 70px;
+//   color: #fa3943;  
+// }
 
-.modal-box h2 {
-  margin-top: 20px;
-  font-size: 25px;
-  font-weight: 500px;
-  color: #333;  
-}
+// .modal-box h2 {
+//   margin-top: 20px;
+//   font-size: 25px;
+//   font-weight: 500px;
+//   color: #333;  
+// }
 
-.modal-box h3 {
-  font-size: 16px;
-  font-weight: 400px;
-  color: #333;
-  text-align: center;
+// .modal-box h3 {
+//   font-size: 16px;
+//   font-weight: 400px;
+//   color: #333;
+//   text-align: center;
   
-}
+// }
 
-.modal-box .buttons {
-  margin-top: 14px;
-  cursor: pointer;
-}
-.modal-box button {
-  font-size: 14px;
-  padding: 6px 12px;
-  margin: 0 10px;
-  cursor: pointer;
-}
+// .modal-box .buttons {
+//   margin-top: 14px;
+//   cursor: pointer;
+// }
+// .modal-box button {
+//   font-size: 14px;
+//   padding: 6px 12px;
+//   margin: 0 10px;
+//   cursor: pointer;
+// }
 
-.overlay {
-  top: -30%;
-  right: -130%;
-  height: 900px;
-  width: 3000px;
-  position: fixed;
-  background: #ff636b;
-  display: none;
-  z-index: 7;  
+// .overlay {
+//   top: -30%;
+//   right: -130%;
+//   height: 900px;
+//   width: 3000px;
+//   position: fixed;
+//   background: #ff636b;
+//   display: none;
+//   z-index: 7;  
+// }
+
+@keyframes slideDown {
+  0% {
+      transform: translateY(-100%);
+  }
+  100% {
+      transform: translateY(0%);
+  }
 }
-
-
 
 .titles {
 	position: absolute;
@@ -598,7 +605,9 @@ input[id="tab5"]:checked ~ ul li label[for="tab5"] {
 	left: 50%;
 	transform: translate(-50%, -50%);
   width: 150%;
-  z-index: 1;
+  animation: slideDown 1s forwards;
+  animation-delay: 5s;
+  z-index: 1 !important;
 }
 
 .titles h1 {
